@@ -7351,7 +7351,7 @@
     },
     {
       "name": "ImageKernelConvolution",
-      "description": "Apply Custom Square image convolution kernel",
+      "description": "Apply custom square convolution kernel to image",
       "returnType": "void",
       "params": [
         {
@@ -7359,7 +7359,7 @@
           "name": "image"
         },
         {
-          "type": "float*",
+          "type": "const float *",
           "name": "kernel"
         },
         {
@@ -7818,6 +7818,33 @@
       ]
     },
     {
+      "name": "ImageDrawLineEx",
+      "description": "Draw a line defining thickness within an image",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2",
+          "name": "start"
+        },
+        {
+          "type": "Vector2",
+          "name": "end"
+        },
+        {
+          "type": "int",
+          "name": "thick"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
       "name": "ImageDrawCircle",
       "description": "Draw a filled circle within an image",
       "returnType": "void",
@@ -8006,6 +8033,141 @@
         {
           "type": "int",
           "name": "thick"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "ImageDrawTriangle",
+      "description": "Draw triangle within an image",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2",
+          "name": "v1"
+        },
+        {
+          "type": "Vector2",
+          "name": "v2"
+        },
+        {
+          "type": "Vector2",
+          "name": "v3"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "ImageDrawTriangleEx",
+      "description": "Draw triangle with interpolated colors within an image",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2",
+          "name": "v1"
+        },
+        {
+          "type": "Vector2",
+          "name": "v2"
+        },
+        {
+          "type": "Vector2",
+          "name": "v3"
+        },
+        {
+          "type": "Color",
+          "name": "c1"
+        },
+        {
+          "type": "Color",
+          "name": "c2"
+        },
+        {
+          "type": "Color",
+          "name": "c3"
+        }
+      ]
+    },
+    {
+      "name": "ImageDrawTriangleLines",
+      "description": "Draw triangle outline within an image",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2",
+          "name": "v1"
+        },
+        {
+          "type": "Vector2",
+          "name": "v2"
+        },
+        {
+          "type": "Vector2",
+          "name": "v3"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "ImageDrawTriangleFan",
+      "description": "Draw a triangle fan defined by points within an image (first vertex is the center)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2 *",
+          "name": "points"
+        },
+        {
+          "type": "int",
+          "name": "pointCount"
+        },
+        {
+          "type": "Color",
+          "name": "color"
+        }
+      ]
+    },
+    {
+      "name": "ImageDrawTriangleStrip",
+      "description": "Draw a triangle strip defined by points within an image",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Image *",
+          "name": "dst"
+        },
+        {
+          "type": "Vector2 *",
+          "name": "points"
+        },
+        {
+          "type": "int",
+          "name": "pointCount"
         },
         {
           "type": "Color",
